k8s/network/ingress-veloshare-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: veloshare-api
  namespace: veloshare
  labels:
    app.kubernetes.io/name: veloshare
    app.kubernetes.io/instance: veloshare
    app.kubernetes.io/part-of: veloshare
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /healthz
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/healthz
        pathType: Exact
        backend:
          service:
            name: rider
            port:
              number: 80
