k8s/network/ingress-veloshare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: veloshare
  namespace: veloshare
  labels:
    app.kubernetes.io/name: veloshare
    app.kubernetes.io/instance: veloshare
    app.kubernetes.io/part-of: veloshare
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
