k8s/network/networkpolicy-pod-lister-api-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-lister-api-egress
  namespace: veloshare
  labels:
    app.kubernetes.io/name: veloshare
    app.kubernetes.io/instance: veloshare
    app.kubernetes.io/part-of: veloshare
    app.kubernetes.io/component: rbac-demo
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: rbac-demo
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 6443
